--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "api",
+  "name": "arip-api",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -15,13 +19,10 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "pg": "^8.11.3",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "nodemon": "^3.0.3"
+  }
 }
